<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueDark"
    tools:context=".DistanceActivity">

    <View
        android:id="@+id/vw_title"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/ic_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgv_distance"
        android:layout_width="300dp"
        android:layout_height="260dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
        android:src="@drawable/undraw_navigator_a479"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imagem" />

    <TextView
        android:id="@+id/txt_distancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/distancia_at_o_destino"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgv_distance" />

    <TextView
        android:id="@+id/txt_step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/passo_3_de_3"
        android:textColor="@color/Hex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_distancia" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_distance"
        style="@style/roundedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:textColorHint="@android:color/darker_gray"
        app:boxBackgroundColor="@color/Bluelight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_step3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_distance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="numberDecimal"
            android:hint="@string/ex_150_km" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imgbtn_voltar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp"
        android:src="@drawable/ic_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/BlueDark"
        android:contentDescription="@string/voltar_a_tela_anterior" />

</androidx.constraintlayout.widget.ConstraintLayout>