<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueDark"
    tools:context="presentation.ConsumeActivity">

    <View
        android:id="@+id/vw_title"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/ic_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgv_consume"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ic_electric_car_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imagem" />

    <TextView
        android:id="@+id/txt_consumo_carro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/consumo_do_carro"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgv_consume" />

    <TextView
        android:id="@+id/txt_step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/passo_2_de_3"
        android:textColor="@color/Hex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_consumo_carro" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_consumo_kml"
        style="@style/roundedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:textColorHint="@android:color/darker_gray"
        app:boxBackgroundColor="@color/Bluelight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_step2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_consumo_kml"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="numberDecimal"
            android:hint="@string/ex_5_km_l" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_proximo_consumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/pr_ximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imgbtn_voltar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp"
        android:src="@drawable/ic_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/BlueDark"
        android:contentDescription="@string/voltar_a_tela_anterior"/>


</androidx.constraintlayout.widget.ConstraintLayout>