<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueDark"
    tools:context=".ResultActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_rounded_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLength="5"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/BlueDark"
        tools:text="$50.0"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revisao_dos_dados_inseridos"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:gravity=""
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view">

        <TableRow>

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/pre_o"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_preco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/consumo"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_consumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/km"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_distancia"
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/white" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_historico"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="24dp"
        android:text="Historico"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_novo_calculo" />

    <Button
        android:id="@+id/btn_novo_calculo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/novo_c_lculo"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/btn_historico"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>